Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,11 +56,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Andy', 'Fixter', 'Sydney', ''),\n",
+       " ('Anthony', 'Bow', 'San Francisco', 'CA'),\n",
+       " ('Barry', 'Jones', 'London', ''),\n",
+       " ('Diane', 'Murphy', 'San Francisco', 'CA'),\n",
+       " ('Foon Yue', 'Tseng', 'NYC', 'NY'),\n",
+       " ('George', 'Vanauf', 'NYC', 'NY'),\n",
+       " ('Gerard', 'Bondur', 'Paris', ''),\n",
+       " ('Gerard', 'Hernandez', 'Paris', ''),\n",
+       " ('Jeff', 'Firrelli', 'San Francisco', 'CA'),\n",
+       " ('Julie', 'Firrelli', 'Boston', 'MA'),\n",
+       " ('Larry', 'Bott', 'London', ''),\n",
+       " ('Leslie', 'Jennings', 'San Francisco', 'CA'),\n",
+       " ('Leslie', 'Thompson', 'San Francisco', 'CA'),\n",
+       " ('Loui', 'Bondur', 'Paris', ''),\n",
+       " ('Mami', 'Nishi', 'Tokyo', 'Chiyoda-Ku'),\n",
+       " ('Martin', 'Gerard', 'Paris', ''),\n",
+       " ('Mary', 'Patterson', 'San Francisco', 'CA'),\n",
+       " ('Pamela', 'Castillo', 'Paris', ''),\n",
+       " ('Peter', 'Marsh', 'Sydney', ''),\n",
+       " ('Steve', 'Patterson', 'Boston', 'MA'),\n",
+       " ('Tom', 'King', 'Sydney', ''),\n",
+       " ('William', 'Patterson', 'Sydney', ''),\n",
+       " ('Yoshimi', 'Kato', 'Tokyo', 'Chiyoda-Ku')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "conn = sqlite3.connect('data.sqlite', detect_types=sqlite3.PARSE_COLNAMES)\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute('''SELECT firstname, lastname, city, state from employees\n",
+    "JOIN offices using (officeCode)\n",
+    "ORDER BY firstname, lastname''').fetchall()"
    ]
   },
   {
@@ -153,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
