--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "cur.execute(\"\"\"\n",
+    "\n",
+    "\"\"\")"
    ]
   },
   {
