--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute(\"\"\"SELECT \n",
+    "cur.execute(\"\"\"SELECT customerName f\n",
     "\n",
     "\"\"\")"
    ]
