--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,8 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute(\"\"\"SELECT customerName f\n",
+    "cur.execute(\"\"\"SELECT customerName from customers\n",
+    "JOIN \n",
     "\n",
     "\"\"\")"
    ]
