--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "# Your code here\n",
     "cur.execute(\"\"\"SELECT customerName from customers\n",
-    "JOIN \n",
+    "JOIN orders \n",
     "\n",
     "\"\"\")"
    ]
