Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,15 +116,351 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Atelier graphique',),\n",
+       " ('Atelier graphique',),\n",
+       " ('Atelier graphique',),\n",
+       " ('Signal Gift Stores',),\n",
+       " ('Signal Gift Stores',),\n",
+       " ('Signal Gift Stores',),\n",
+       " ('Australian Collectors, Co.',),\n",
+       " ('Australian Collectors, Co.',),\n",
+       " ('Australian Collectors, Co.',),\n",
+       " ('Australian Collectors, Co.',),\n",
+       " ('Australian Collectors, Co.',),\n",
+       " ('La Rochelle Gifts',),\n",
+       " ('La Rochelle Gifts',),\n",
+       " ('La Rochelle Gifts',),\n",
+       " ('La Rochelle Gifts',),\n",
+       " ('Baane Mini Imports',),\n",
+       " ('Baane Mini Imports',),\n",
+       " ('Baane Mini Imports',),\n",
+       " ('Baane Mini Imports',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Mini Gifts Distributors Ltd.',),\n",
+       " ('Blauer See Auto, Co.',),\n",
+       " ('Blauer See Auto, Co.',),\n",
+       " ('Blauer See Auto, Co.',),\n",
+       " ('Blauer See Auto, Co.',),\n",
+       " ('Mini Wheels Co.',),\n",
+       " ('Mini Wheels Co.',),\n",
+       " ('Mini Wheels Co.',),\n",
+       " ('Land of Toys Inc.',),\n",
+       " ('Land of Toys Inc.',),\n",
+       " ('Land of Toys Inc.',),\n",
+       " ('Land of Toys Inc.',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Euro+ Shopping Channel',),\n",
+       " ('Volvo Model Replicas, Co',),\n",
+       " ('Volvo Model Replicas, Co',),\n",
+       " ('Volvo Model Replicas, Co',),\n",
+       " ('Volvo Model Replicas, Co',),\n",
+       " ('Danish Wholesale Imports',),\n",
+       " ('Danish Wholesale Imports',),\n",
+       " ('Danish Wholesale Imports',),\n",
+       " ('Danish Wholesale Imports',),\n",
+       " ('Danish Wholesale Imports',),\n",
+       " ('Saveley & Henriot, Co.',),\n",
+       " ('Saveley & Henriot, Co.',),\n",
+       " ('Saveley & Henriot, Co.',),\n",
+       " ('Dragon Souveniers, Ltd.',),\n",
+       " ('Dragon Souveniers, Ltd.',),\n",
+       " ('Dragon Souveniers, Ltd.',),\n",
+       " ('Dragon Souveniers, Ltd.',),\n",
+       " ('Dragon Souveniers, Ltd.',),\n",
+       " ('Muscle Machine Inc',),\n",
+       " ('Muscle Machine Inc',),\n",
+       " ('Muscle Machine Inc',),\n",
+       " ('Muscle Machine Inc',),\n",
+       " ('Diecast Classics Inc.',),\n",
+       " ('Diecast Classics Inc.',),\n",
+       " ('Diecast Classics Inc.',),\n",
+       " ('Diecast Classics Inc.',),\n",
+       " ('Technics Stores Inc.',),\n",
+       " ('Technics Stores Inc.',),\n",
+       " ('Technics Stores Inc.',),\n",
+       " ('Technics Stores Inc.',),\n",
+       " ('Handji Gifts& Co',),\n",
+       " ('Handji Gifts& Co',),\n",
+       " ('Handji Gifts& Co',),\n",
+       " ('Handji Gifts& Co',),\n",
+       " ('Herkku Gifts',),\n",
+       " ('Herkku Gifts',),\n",
+       " ('Herkku Gifts',),\n",
+       " ('Daedalus Designs Imports',),\n",
+       " ('Daedalus Designs Imports',),\n",
+       " (\"La Corne D'abondance, Co.\",),\n",
+       " (\"La Corne D'abondance, Co.\",),\n",
+       " (\"La Corne D'abondance, Co.\",),\n",
+       " ('Cambridge Collectables Co.',),\n",
+       " ('Cambridge Collectables Co.',),\n",
+       " ('Gift Depot Inc.',),\n",
+       " ('Gift Depot Inc.',),\n",
+       " ('Gift Depot Inc.',),\n",
+       " ('Osaka Souveniers Co.',),\n",
+       " ('Osaka Souveniers Co.',),\n",
+       " ('Vitachrome Inc.',),\n",
+       " ('Vitachrome Inc.',),\n",
+       " ('Vitachrome Inc.',),\n",
+       " ('Toys of Finland, Co.',),\n",
+       " ('Toys of Finland, Co.',),\n",
+       " ('Toys of Finland, Co.',),\n",
+       " ('AV Stores, Co.',),\n",
+       " ('AV Stores, Co.',),\n",
+       " ('AV Stores, Co.',),\n",
+       " ('Clover Collections, Co.',),\n",
+       " ('Clover Collections, Co.',),\n",
+       " ('Auto-Moto Classics Inc.',),\n",
+       " ('Auto-Moto Classics Inc.',),\n",
+       " ('Auto-Moto Classics Inc.',),\n",
+       " ('UK Collectables, Ltd.',),\n",
+       " ('UK Collectables, Ltd.',),\n",
+       " ('UK Collectables, Ltd.',),\n",
+       " ('Canadian Gift Exchange Network',),\n",
+       " ('Canadian Gift Exchange Network',),\n",
+       " ('Online Mini Collectables',),\n",
+       " ('Online Mini Collectables',),\n",
+       " ('Toys4GrownUps.com',),\n",
+       " ('Toys4GrownUps.com',),\n",
+       " ('Toys4GrownUps.com',),\n",
+       " ('Mini Caravy',),\n",
+       " ('Mini Caravy',),\n",
+       " ('Mini Caravy',),\n",
+       " ('King Kong Collectables, Co.',),\n",
+       " ('King Kong Collectables, Co.',),\n",
+       " ('Enaco Distributors',),\n",
+       " ('Enaco Distributors',),\n",
+       " ('Enaco Distributors',),\n",
+       " ('Boards & Toys Co.',),\n",
+       " ('Boards & Toys Co.',),\n",
+       " ('Heintze Collectables',),\n",
+       " ('Heintze Collectables',),\n",
+       " ('Québec Home Shopping Network',),\n",
+       " ('Québec Home Shopping Network',),\n",
+       " ('Québec Home Shopping Network',),\n",
+       " ('Collectable Mini Designs Co.',),\n",
+       " ('Collectable Mini Designs Co.',),\n",
+       " ('giftsbymail.co.uk',),\n",
+       " ('giftsbymail.co.uk',),\n",
+       " ('Alpha Cognac',),\n",
+       " ('Alpha Cognac',),\n",
+       " ('Alpha Cognac',),\n",
+       " ('Amica Models & Co.',),\n",
+       " ('Amica Models & Co.',),\n",
+       " ('Lyon Souveniers',),\n",
+       " ('Lyon Souveniers',),\n",
+       " ('Lyon Souveniers',),\n",
+       " ('Auto Associés & Cie.',),\n",
+       " ('Auto Associés & Cie.',),\n",
+       " ('Toms Spezialitäten, Ltd',),\n",
+       " ('Toms Spezialitäten, Ltd',),\n",
+       " ('Royal Canadian Collectables, Ltd.',),\n",
+       " ('Royal Canadian Collectables, Ltd.',),\n",
+       " (\"Anna's Decorations, Ltd\",),\n",
+       " (\"Anna's Decorations, Ltd\",),\n",
+       " (\"Anna's Decorations, Ltd\",),\n",
+       " (\"Anna's Decorations, Ltd\",),\n",
+       " ('Rovelli Gifts',),\n",
+       " ('Rovelli Gifts',),\n",
+       " ('Rovelli Gifts',),\n",
+       " ('Souveniers And Things Co.',),\n",
+       " ('Souveniers And Things Co.',),\n",
+       " ('Souveniers And Things Co.',),\n",
+       " ('Souveniers And Things Co.',),\n",
+       " (\"Marta's Replicas Co.\",),\n",
+       " (\"Marta's Replicas Co.\",),\n",
+       " ('Vida Sport, Ltd',),\n",
+       " ('Vida Sport, Ltd',),\n",
+       " ('Norway Gifts By Mail, Co.',),\n",
+       " ('Norway Gifts By Mail, Co.',),\n",
+       " ('Oulu Toy Supplies, Inc.',),\n",
+       " ('Oulu Toy Supplies, Inc.',),\n",
+       " ('Oulu Toy Supplies, Inc.',),\n",
+       " ('Petit Auto',),\n",
+       " ('Petit Auto',),\n",
+       " ('Petit Auto',),\n",
+       " ('Mini Classics',),\n",
+       " ('Mini Classics',),\n",
+       " ('Mini Creations Ltd.',),\n",
+       " ('Mini Creations Ltd.',),\n",
+       " ('Mini Creations Ltd.',),\n",
+       " ('Corporate Gift Ideas Co.',),\n",
+       " ('Corporate Gift Ideas Co.',),\n",
+       " ('Corporate Gift Ideas Co.',),\n",
+       " ('Corporate Gift Ideas Co.',),\n",
+       " ('Down Under Souveniers, Inc',),\n",
+       " ('Down Under Souveniers, Inc',),\n",
+       " ('Down Under Souveniers, Inc',),\n",
+       " ('Down Under Souveniers, Inc',),\n",
+       " ('Down Under Souveniers, Inc',),\n",
+       " ('Stylish Desk Decors, Co.',),\n",
+       " ('Stylish Desk Decors, Co.',),\n",
+       " ('Stylish Desk Decors, Co.',),\n",
+       " ('Tekni Collectables Inc.',),\n",
+       " ('Tekni Collectables Inc.',),\n",
+       " ('Tekni Collectables Inc.',),\n",
+       " ('Australian Gift Network, Co',),\n",
+       " ('Australian Gift Network, Co',),\n",
+       " ('Australian Gift Network, Co',),\n",
+       " ('Suominen Souveniers',),\n",
+       " ('Suominen Souveniers',),\n",
+       " ('Suominen Souveniers',),\n",
+       " ('Classic Gift Ideas, Inc',),\n",
+       " ('Classic Gift Ideas, Inc',),\n",
+       " ('CAF Imports',),\n",
+       " ('CAF Imports',),\n",
+       " (\"Men 'R' US Retailers, Ltd.\",),\n",
+       " (\"Men 'R' US Retailers, Ltd.\",),\n",
+       " ('Marseille Mini Autos',),\n",
+       " ('Marseille Mini Autos',),\n",
+       " ('Marseille Mini Autos',),\n",
+       " ('Reims Collectables',),\n",
+       " ('Reims Collectables',),\n",
+       " ('Reims Collectables',),\n",
+       " ('Reims Collectables',),\n",
+       " ('Reims Collectables',),\n",
+       " ('GiftsForHim.com',),\n",
+       " ('GiftsForHim.com',),\n",
+       " ('GiftsForHim.com',),\n",
+       " ('Gifts4AllAges.com',),\n",
+       " ('Gifts4AllAges.com',),\n",
+       " ('Gifts4AllAges.com',),\n",
+       " ('Online Diecast Creations Co.',),\n",
+       " ('Online Diecast Creations Co.',),\n",
+       " ('Online Diecast Creations Co.',),\n",
+       " ('Collectables For Less Inc.',),\n",
+       " ('Collectables For Less Inc.',),\n",
+       " ('Collectables For Less Inc.',),\n",
+       " ('Royale Belge',),\n",
+       " ('Royale Belge',),\n",
+       " ('Royale Belge',),\n",
+       " ('Royale Belge',),\n",
+       " ('Salzburg Collectables',),\n",
+       " ('Salzburg Collectables',),\n",
+       " ('Salzburg Collectables',),\n",
+       " ('Salzburg Collectables',),\n",
+       " ('Cruz & Sons Co.',),\n",
+       " ('Cruz & Sons Co.',),\n",
+       " ('Cruz & Sons Co.',),\n",
+       " (\"L'ordine Souveniers\",),\n",
+       " (\"L'ordine Souveniers\",),\n",
+       " (\"L'ordine Souveniers\",),\n",
+       " ('Tokyo Collectables, Ltd',),\n",
+       " ('Tokyo Collectables, Ltd',),\n",
+       " ('Tokyo Collectables, Ltd',),\n",
+       " ('Tokyo Collectables, Ltd',),\n",
+       " ('Auto Canal+ Petit',),\n",
+       " ('Auto Canal+ Petit',),\n",
+       " ('Auto Canal+ Petit',),\n",
+       " ('Extreme Desk Decorations, Ltd',),\n",
+       " ('Extreme Desk Decorations, Ltd',),\n",
+       " ('Extreme Desk Decorations, Ltd',),\n",
+       " ('Bavarian Collectables Imports, Co.',),\n",
+       " ('Classic Legends Inc.',),\n",
+       " ('Classic Legends Inc.',),\n",
+       " ('Classic Legends Inc.',),\n",
+       " ('Gift Ideas Corp.',),\n",
+       " ('Gift Ideas Corp.',),\n",
+       " ('Gift Ideas Corp.',),\n",
+       " ('Scandinavian Gift Ideas',),\n",
+       " ('Scandinavian Gift Ideas',),\n",
+       " ('Scandinavian Gift Ideas',),\n",
+       " ('The Sharp Gifts Warehouse',),\n",
+       " ('The Sharp Gifts Warehouse',),\n",
+       " ('The Sharp Gifts Warehouse',),\n",
+       " ('The Sharp Gifts Warehouse',),\n",
+       " ('Mini Auto Werke',),\n",
+       " ('Mini Auto Werke',),\n",
+       " ('Mini Auto Werke',),\n",
+       " ('Super Scale Inc.',),\n",
+       " ('Super Scale Inc.',),\n",
+       " ('Microscale Inc.',),\n",
+       " ('Microscale Inc.',),\n",
+       " ('Corrida Auto Replicas, Ltd',),\n",
+       " ('Corrida Auto Replicas, Ltd',),\n",
+       " ('Corrida Auto Replicas, Ltd',),\n",
+       " ('FunGiftIdeas.com',),\n",
+       " ('FunGiftIdeas.com',),\n",
+       " ('FunGiftIdeas.com',),\n",
+       " ('Australian Collectables, Ltd',),\n",
+       " ('Australian Collectables, Ltd',),\n",
+       " ('Australian Collectables, Ltd',),\n",
+       " ('Frau da Collezione',),\n",
+       " ('Frau da Collezione',),\n",
+       " ('West Coast Collectables Co.',),\n",
+       " ('West Coast Collectables Co.',),\n",
+       " ('Iberia Gift Imports, Corp.',),\n",
+       " ('Iberia Gift Imports, Corp.',),\n",
+       " ('Motor Mint Distributors Inc.',),\n",
+       " ('Motor Mint Distributors Inc.',),\n",
+       " ('Motor Mint Distributors Inc.',),\n",
+       " ('Signal Collectibles Ltd.',),\n",
+       " ('Signal Collectibles Ltd.',),\n",
+       " ('Double Decker Gift Stores, Ltd',),\n",
+       " ('Double Decker Gift Stores, Ltd',),\n",
+       " ('Diecast Collectables',),\n",
+       " ('Diecast Collectables',),\n",
+       " (\"Kelly's Gift Shop\",),\n",
+       " (\"Kelly's Gift Shop\",),\n",
+       " (\"Kelly's Gift Shop\",),\n",
+       " (\"Kelly's Gift Shop\",)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "cur.execute(\"\"\"SELECT customerName from customers\n",
-    "JOIN orders using(cus)\n",
+    "JOIN orders using(customerNumber)\n",
     "\n",
-    "\"\"\")"
+    "\"\"\").fetchall()"
    ]
   },
   {
