Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "cur.execut"
    ]
   },
   {
