Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,9 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute(\"\")"
+    "cur.execute(\"\"\"SELECT \n",
+    "\n",
+    "\"\"\")"
    ]
   },
   {
