--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "cur.execute(\"\"\"SELECT \n",
+    "cur.execute(\"\"\"SELECT o\n",
     "\n",
     "\"\"\")"
    ]
